--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,12 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+actix-web = "3"
+dotenv = "0.15.0"
+reqwest = "0.11.3"
+futures = "0.3.15"
+rand = "0.8.3"
+hex = "0.4.3"
+
+[dependencies.ed25519-dalek]
+version = "1"
