--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,8 @@ reqwest = "0.11.3"
 futures = "0.3.15"
 rand = "0.8.3"
 hex = "0.4.3"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0.64"
 
 [dependencies.ed25519-dalek]
 version = "1"
