--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,20 +1,32 @@
 [package]
-name = "norseline-rs"
+name = "norseline"
 version = "0.1.0"
 authors = ["damccull <damccull+git@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lib]
+path = "src/lib.rs"
+
+[[bin]]
+path = "src/main.rs"
+name = "norseline"
+
 [dependencies]
 actix-web = "3"
 dotenv = "0.15.0"
-reqwest = "0.11.3"
+reqwest = "0.10" # This version needed for compatibility with actix-web. Tokio 0.2.
 futures = "0.3.15"
 rand = "0.8.3"
 hex = "0.4.3"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.64"
 
+
 [dependencies.ed25519-dalek]
 version = "1"
+
+[dev-dependencies]
+tokio = { version = "0.2", features = ["full"] }
+actix-rt = "1"
