--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,11 +15,12 @@ name = "norseline"
 
 [dependencies]
 actix-web = "3"
+diesel = { version = "1.4.6", features = ["sqlite"] }
 dotenv = "0.15.0"
-reqwest = "0.10" # This version needed for compatibility with actix-web. Tokio 0.2.
 futures = "0.3.15"
-rand = "0.8.3"
 hex = "0.4.3"
+rand = "0.8.3"
+reqwest = "0.10" # This version needed for compatibility with actix-web. Tokio 0.2.
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.64"
 
