--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,9 +16,11 @@ name = "norseline"
 [dependencies]
 actix-web = "3"
 diesel = { version = "1.4.6", features = ["sqlite"] }
+diesel_migrations = "1.4.0"
 dotenv = "0.15.0"
 futures = "0.3.15"
 hex = "0.4.3"
+libsqlite3-sys = { version = "^0", features = ["bundled"] }
 rand = "0.8.3"
 reqwest = "0.10" # This version needed for compatibility with actix-web. Tokio 0.2.
 serde = { version = "1.0", features = ["derive"] }
