--- a/norseline-app/Cargo.toml
+++ b/norseline-app/Cargo.toml
@@ -14,7 +14,8 @@ path = "src/main.rs"
 name = "norseline"
 
 [dependencies]
-actix-web = "3"
+#actix-web = "3"
+actix-web = "=4.0.0-beta.6"
 diesel = { version = "1.4.6", features = ["sqlite"] }
 diesel_migrations = "1.4.0"
 dotenv = "0.15.0"
@@ -25,7 +26,8 @@ rand = "0.8.3"
 reqwest = "0.10" # This version needed for compatibility with actix-web. Tokio 0.2.
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.64"
-tokio = { version = "0.2", features = ["full"] }
+#tokio = { version = "0.2", features = ["full"] }
+tokio = { version = "1", features = ["full"] }
 
 
 [dependencies.ed25519-dalek]
