--- a/norseline-app/Cargo.toml
+++ b/norseline-app/Cargo.toml
@@ -22,7 +22,7 @@ futures = "0.3.15"
 hex = "0.4.3"
 libsqlite3-sys = { version = "^0", features = ["bundled"] }
 rand = "0.8.3"
-reqwest = "0.10" # This version needed for compatibility with actix-web. Tokio 0.2.
+reqwest = "0.11"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.64"
 tokio = { version = "1", features = ["full"] }
@@ -32,4 +32,4 @@ tokio = { version = "1", features = ["full"] }
 version = "1"
 
 [dev-dependencies]
-actix-rt = "1"
+actix-rt = "2.2"
