--- a/norseline-app/Cargo.toml
+++ b/norseline-app/Cargo.toml
@@ -26,6 +26,8 @@ reqwest = "0.11"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.64"
 tokio = { version = "1", features = ["full"] }
+twilight-model = "0.4.2"
+twilight-http = "0.4.2"
 
 
 [dependencies.ed25519-dalek]
