--- a/norseline-app/Cargo.toml
+++ b/norseline-app/Cargo.toml
@@ -15,23 +15,30 @@ name = "norseline"
 
 [dependencies]
 actix-web = "=4.0.0-beta.6"
-diesel = { version = "1.4.6", features = ["sqlite"] }
-diesel_migrations = "1.4.0"
+chrono = "0.4.19"
+config = "0.11.0"
 dotenv = "0.15.0"
 futures = "0.3.15"
 hex = "0.4.3"
-libsqlite3-sys = { version = "^0", features = ["bundled"] }
 rand = "0.8.3"
 reqwest = "0.11"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.64"
+sqlx = { version = "0.5.5", features = [
+    "runtime-actix-rustls",
+    "macros",
+    "postgres",
+    "uuid",
+    "chrono",
+    "migrate",
+], default-features = false }
 tokio = { version = "1", features = ["full"] }
 twilight-model = "0.4.2"
 twilight-http = "0.4.2"
-
+uuid = { version = "0.8.2", features = ["v4"] }
 
 [dependencies.ed25519-dalek]
 version = "1"
 
 [dev-dependencies]
-actix-rt = "2.2"
+actix-rt = "2"
