--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ serde_json = "1.0.64"
 sqlx = { version = "0.5.5", features = [
     "runtime-actix-rustls",
     "macros",
-    "postgres",
+    "sqlite",
     "uuid",
     "chrono",
     "migrate",
