--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,10 @@ path = "src/main.rs"
 name = "norseline"
 
 [dependencies]
-actix-web = "=4.0.0-beta.6"
+anyhow = "1.0.44"
+actix-web = "=4.0.0-beta.9"
+actix-cors = "0.6.0-beta.2"
+actix-http = "3.0.0-beta.11"
 chrono = "0.4.19"
 config = "0.11.0"
 dotenv = "0.15.0"
@@ -23,11 +26,12 @@ hex = "0.4.3"
 rand = "0.8.3"
 reqwest = "0.11"
 serde = { version = "1.0", features = ["derive"] }
+serde-aux = "3.0.1"
 serde_json = "1.0.64"
 sqlx = { version = "0.5.5", features = [
     "runtime-actix-rustls",
     "macros",
-    "sqlite",
+    "postgres",
     "uuid",
     "chrono",
     "migrate",
@@ -37,8 +41,30 @@ twilight-model = "0.4.2"
 twilight-http = "0.4.2"
 uuid = { version = "0.8.2", features = ["v4"] }
 
-[dependencies.ed25519-dalek]
-version = "1"
+tracing = { version = "0.1", features = ["log"] }
+tracing-actix-web = "0.4.0-beta.8"
+tracing-bunyan-formatter = "0.2.6"
+tracing-futures = "0.2.5"
+tracing-log = "0.1.2"
+tracing-subscriber = { version = "0.2.12", features = [
+    "registry",
+    "env-filter",
+] }
+
+thiserror = "1.0.30"
+
+
+# [dependencies.ed25519-dalek]
+# version = "1"
 
 [dev-dependencies]
 actix-rt = "2"
+claim = "0.5.0"
+fake = "~2.3"
+linkify = "0.5.0"
+once_cell = "1.8.0"
+quickcheck = "0.9.2"
+quickcheck_macros = "0.9.1"
+serde_json = "1.0.68"
+tokio = { version = "1", features = ["rt", "macros"] }
+wiremock = "0.5"
