Add discord config section

--- a/configuration/base.yml
+++ b/configuration/base.yml
@@ -12,3 +12,5 @@ email_client:
   sender_email: "test@gmail.com"
   authorization_token: "my-secret-token"
   timeout_milliseconds: 10000
+discord:
+  public_key: "public-key"
