--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ anyhow = "1.0.44"
 actix-web = "=4.0.0-beta.9"
 actix-cors = "0.6.0-beta.2"
 actix-http = "3.0.0-beta.11"
+actix-service = "2.0.0-beta.5"
 chrono = "0.4.19"
 config = "0.11.0"
 dotenv = "0.15.0"
