--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,8 +24,9 @@ config = "0.11.0"
 dotenv = "0.15.0"
 futures = "0.3.15"
 hex = "0.4.3"
-rand = "0.8.3"
-reqwest = "0.11"
+rand = "0.8"
+rand-dalek = { version = "0.7", package = "rand" }
+reqwest = { version = "0.11", features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
 serde-aux = "3.0.1"
 serde_json = "1.0.64"
@@ -38,8 +39,7 @@ sqlx = { version = "0.5.5", features = [
     "migrate",
 ], default-features = false }
 tokio = { version = "1", features = ["full"] }
-twilight-model = "0.4.2"
-twilight-http = "0.4.2"
+twilight-model = "0.8"
 uuid = { version = "0.8.2", features = ["v4"] }
 
 tracing = { version = "0.1", features = ["log"] }
@@ -53,6 +53,7 @@ tracing-subscriber = { version = "0.2.12", features = [
 ] }
 
 thiserror = "1.0.30"
+mime = "0.3.16"
 
 
 [dependencies.ed25519-dalek]
