--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,7 @@ sqlx = { version = "0.5.5", features = [
 ], default-features = false }
 tokio = { version = "1", features = ["full"] }
 twilight-model = "0.8"
+twilight-http = "0.8"
 twilight-util = { version = "0.8", features = ["builder"] }
 uuid = { version = "0.8.2", features = ["v4"] }
 
