--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,6 +56,7 @@ tracing-subscriber = { version = "0.2.12", features = [
 
 thiserror = "1.0.30"
 mime = "0.3.16"
+async-trait = "0.1.52"
 
 
 [dependencies.ed25519-dalek]
