--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,6 +57,7 @@ tracing-subscriber = { version = "0.2.12", features = [
 thiserror = "1.0.30"
 mime = "0.3.16"
 async-trait = "0.1.52"
+twilight-interactions = "0.8"
 
 
 [dependencies.ed25519-dalek]
