--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,7 +42,7 @@ tokio = { version = "1", features = ["full"] }
 twilight-model = "0.8"
 twilight-http = "0.8"
 twilight-util = { version = "0.8", features = ["builder"] }
-uuid = { version = "0.8.2", features = ["v4"] }
+uuid = { version = "0.8.2", features = ["serde"] }
 
 tracing = { version = "0.1", features = ["log"] }
 tracing-actix-web = "0.4.0-beta.8"
