--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ sqlx = { version = "0.5.5", features = [
     "uuid",
     "chrono",
     "migrate",
+    "offline",
 ], default-features = false }
 tokio = { version = "1", features = ["full"] }
 twilight-model = "0.8"
