--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,56 +14,55 @@ path = "src/main.rs"
 name = "norseline"
 
 [dependencies]
-anyhow = "1.0.44"
-actix-web = "=4.0.0-beta.9"
-actix-cors = "0.6.0-beta.2"
-actix-http = "3.0.0-beta.11"
-actix-service = "2.0.0-beta.5"
-chrono = "0.4.19"
-config = "0.11.0"
-dotenv = "0.15.0"
+anyhow = "~1.0.0"
+actix-web = "~4.0.1"
+actix-cors = "~0.6.0-beta.10"
+actix-http = "~3.0.0"
+actix-service = "~2.0.2"
+async-trait = "0.1.52"
+chrono = { version = "~0.4.19", default-features = false, features = [
+    "alloc",
+    "clock",
+    "std",
+] }
+config = "~0.12.0"  
+ed25519-dalek = "~1.0.0"
 futures = "0.3.15"
-hex = "0.4.3"
+hex = "~0.4.3"
+mime = "0.3.16"
 rand = "0.8"
 rand-dalek = { version = "0.7", package = "rand" }
 reqwest = { version = "0.11", features = ["json"] }
-serde = { version = "1.0", features = ["derive"] }
-serde-aux = "3.0.1"
-serde_json = "1.0.64"
-sqlx = { version = "0.5.5", features = [
-    "runtime-actix-rustls",
-    "macros",
-    "postgres",
-    "uuid",
+serde = { version = "~1.0.136", features = ["derive"] }
+serde-aux = "~3.0.1"
+serde_json = "~1.0.79"
+sqlx = { version = "0.5.11", default-features = false, features = [
     "chrono",
+    "macros",
     "migrate",
     "offline",
-], default-features = false }
-tokio = { version = "1", features = ["full"] }
-twilight-model = "0.8"
-twilight-http = "0.8"
-twilight-util = { version = "0.8", features = ["builder"] }
-uuid = { version = "0.8.2", features = ["serde"] }
-
-tracing = { version = "0.1", features = ["log"] }
-tracing-actix-web = "0.4.0-beta.8"
-tracing-bunyan-formatter = "0.2.6"
-tracing-futures = "0.2.5"
-tracing-log = "0.1.2"
-tracing-subscriber = { version = "0.2.12", features = [
+    "postgres",
+    "runtime-actix-rustls",
+    "uuid",
+] }
+thiserror = "~1.0.30"
+tracing = { version = "~0.1.31", features = ["log"] }
+tracing-actix-web = "~0.5.1"
+tracing-bunyan-formatter = "~0.3.2"
+tracing-futures = "~0.2.5"
+tracing-log = "~0.1.2"
+tracing-subscriber = { version = "~0.3.9", features = [
     "registry",
     "env-filter",
 ] }
+tokio = { version = "1", features = ["full"] }
+twilight-http = "~0.8"
+twilight-interactions = "~0.8.1"
+twilight-model = "~0.8"
+twilight-util = { version = "~0.8", features = ["builder"] }
+urlencoding = "~2.1.0"
+uuid = { version = "~0.8.2", features = ["v4", "serde"] }
 
-thiserror = "1.0.30"
-mime = "0.3.16"
-async-trait = "0.1.52"
-twilight-interactions = "0.8.1"
-urlencoding = "2.1.0"
-
-
-[dependencies.ed25519-dalek]
-version = "1"
 
 [dev-dependencies]
 actix-rt = "2"
