--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -218,4 +218,4 @@ jobs:
       - name: Run cargo-tarpaulin
         uses: actions-rs/tarpaulin@v0.1
         with:
-          args: "--ignore-tests --avoid-cfg-tarpaulin"
+          args: "--ignore-tests --avoid-cfg-tarpaulin --workspace --exclude xtask"
