Text replace 'norseline' for 'scguild'

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgresql://postgres:password@localhost:5432/norseline?sslmode=disable
+DATABASE_URL=postgresql://postgres:password@localhost:5432/scguild?sslmode=disable
