--- a/scguild-rs/Cargo.toml
+++ b/scguild-rs/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "norseline"
+name = "scguild"
 version = "0.1.0"
 authors = ["damccull <damccull+git@gmail.com>"]
 edition = "2021"
@@ -11,7 +11,7 @@ path = "src/lib.rs"
 
 [[bin]]
 path = "src/main.rs"
-name = "norseline"
+name = "scguild"
 
 [dependencies]
 anyhow = "~1.0.0"
