Make the program a library with bin

--- a/scguild/Cargo.toml
+++ b/scguild/Cargo.toml
@@ -4,6 +4,14 @@ version = "0.1.0"
 edition = "2021"
 publish = false
 
+[lib]
+name = "scguild"
+path = "src/lib.rs"
+
+[[bin]]
+name = "scguild"
+path = "src/main.rs"
+
 [dependencies]
 anyhow = "1.0.68"
 poise = "0.5.2"
