--- a/scguild/Cargo.toml
+++ b/scguild/Cargo.toml
@@ -20,3 +20,5 @@ shuttle-runtime = "0.30.0"
 shuttle-secrets = "0.30.0"
 tracing = "0.1.37"
 tokio = "1.26.0"
+tracing-bunyan-formatter = "0.3.9"
+tracing-subscriber = "0.3.17"
