--- a/scguild/Cargo.toml
+++ b/scguild/Cargo.toml
@@ -19,3 +19,7 @@ tracing = "0.1.37"
 tokio = "1.26.0"
 tracing-bunyan-formatter = "0.3.9"
 tracing-subscriber = "0.3.17"
+config = "0.13.3"
+secrecy = { version = "0.8.0", features = ["serde"] }
+serde = { version = "1.0.190", features = ["serde_derive"] }
+serde-aux = "4.2.0"
