--- a/scguild/Cargo.toml
+++ b/scguild/Cargo.toml
@@ -16,9 +16,9 @@ path = "src/main.rs"
 anyhow = "1.0.68"
 poise = "0.5.2"
 tracing = "0.1.37"
-tokio = "1.26.0"
+tokio = { version = "1.26.0", features = ["full"] }
 tracing-bunyan-formatter = "0.3.9"
-tracing-subscriber = "0.3.17"
+tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
 config = "0.13.3"
 secrecy = { version = "0.8.0", features = ["serde"] }
 serde = { version = "1.0.190", features = ["serde_derive"] }
