--- a/scguild/Cargo.toml
+++ b/scguild/Cargo.toml
@@ -34,3 +34,4 @@ uuid = { version = "1.5.0", features = ["v4", "serde"] }
 hyper = "0.14.27"
 tower = "0.4.13"
 tower-http = { version = "0.4.4", features = ["trace", "request-id", "util"] }
+http = "0.2.9"
