Move rustsec exclusions to deny.toml

--- a/deny.toml
+++ b/deny.toml
@@ -76,6 +76,7 @@ notice = "warn"
 ignore = [
     #"RUSTSEC-0000-0000",
     #"RUSTSEC-2020-0071" # from chrono probably
+    "RUSTSEC-2023-0065",
 ]
 # Threshold for security vulnerabilities, any vulnerability with a CVSS score
 # lower than the range specified will be ignored. Note that ignored advisories
@@ -110,7 +111,7 @@ allow = [
     "Unicode-DFS-2016",
     "BSD-3-Clause",
     "OpenSSL",
-    "MPL-2.0"
+    "MPL-2.0",
 ]
 # List of explicitly disallowed licenses
 # See https://spdx.org/licenses/ for list of possible licenses
@@ -162,7 +163,7 @@ expression = "MIT AND ISC AND OpenSSL"
 # depending on the rest of your configuration
 license-files = [
     # Each entry is a crate relative path, and the (opaque) hash of its contents
-    { path = "LICENSE", hash = 0xbd0eed23 }
+    { path = "LICENSE", hash = 0xbd0eed23 },
 ]
 
 [licenses.private]
