--- a/scguild/Cargo.toml
+++ b/scguild/Cargo.toml
@@ -36,3 +36,12 @@ tower = "0.4.13"
 tower-http = { version = "0.4.4", features = ["trace", "request-id", "util"] }
 http = "0.2.9"
 redis_pool = "0.2.1"
+reqwest = { version = "0.11.22", features = ["cookies", "json", "rustls-tls"] , default-features = false}
+argon2 = { version = "0.5.2", features = ["std"] }
+rand = { version = "0.8.5", features = ["std_rng"] }
+
+[dev-dependencies]
+linkify = "0.10.0"
+once_cell = "1.18.0"
+serde_json = "1.0.107"
+wiremock = "0.5.19"
