--- a/scguild/.env
+++ b/scguild/.env
@@ -1,1 +1,1 @@
-DATABASE_URL="postgres://postgres:password@localhost:5432/zero2prod"
+DATABASE_URL="postgres://postgres:password@localhost:5432/scguild"
