--- a/scguild/configuration/base.yml
+++ b/scguild/configuration/base.yml
@@ -8,7 +8,7 @@ database:
   port: 5432
   username: "postgres"
   password: "password"
-  database_name: "zero2prod"
+  database_name: "scguild"
 email_client:
   base_url: "localhost"
   sender_email: "test@gmail.com"
