Change 'norseline' strings to 'scguild'
Signed-off-by: damccull <401104+damccull@users.noreply.github.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,7 +70,7 @@ jobs:
           cargo xtask migrate
 
       - name: Check sqlx metadata file
-        working-directory: ./norseline-rs
+        working-directory: ./scguild-rs
         run: cargo sqlx prepare --check -- --lib
 
       - name: Run cargo test
